# Praktikum

ADS_Praktika/1_1/: CMakeLists.txt  Ring.cpp  Ring.h  RingNode.cpp  RingNode.h  catch.h  main.cpp
ADS_Praktika/1_2/: CMakeLists.txt  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
